js/js.translator/testData/incremental/invalidation/typeScriptExportsPerFile/lib1/l1.8.kt
@JsExport
fun foo() = 0

@JsExport
@JsName("RenamedExportedClass")
class ExportedClass(val value: Int) {
    fun getValue() = value
}
